2003-06-09  Christian Ruppert <arc@users.sf.net>
	* uwm/windows.c: added FocusWin global.
	* uwm/handlers.c: added handlers for FocusIn and FocusOut events.
	* uwm/uwm.h: added FocusChangeMask to FRAME_EVENTS.
	* uwm/windows.c (DrawWinBorder): changed criteria for border color
	  from ActiveWin to FocusWin.
	* uwm/windows.c (ActivateWin): Changed for new focus handling.
	* uwm/widgets.h, uwm/widgets.c, uwm/windows.c, uwm/properties.c,
	  uwm/handlers.c: removed 'Active' parameter from DrawFrameBevel and
          DrawTitle functions.
	* uwm/handlers.c: no longer reacting on KeyRelease events that are not
	  on our screen.
	* uwm/uwm.h, uwm/windows.c: added flag ACTIVE_BORDER to ultimate
	  context which is set by DrawWinBorder.

2003-06-05  Christian Ruppert <arc@users.sf.net>
	* autogen.sh: added cleanup code to remove modifications made by
	  new gettext in case they are accidentally checked into cvs.

2003-05-17  Christian Ruppert <arc@users.sf.net>
	* autogen.sh: changed the order of gettextize and aclocal and added
	  new args for new gettext versions (don't know at which version they
	  changed the behavior, it's changed now and should work with
	  gettext 0.11.5 and later)
	* configure.in: removed intl/Makefile po/Makefile.in and po/Makefile
	  from AC_OUTPUT because gettextize now adds these files regardless
	  wether they are there or not which causes problems with
	  automake/autoconf.
	* acconfig.h: deleted because it is no longer needed with new versoins
	  of gnu autoconf/automake
	* configure.in: changed AC_DEFINEs and AC_DEFINE_UNQUOTEDs to
	  compensate for now missing acconfig.h
	* po/*.po: completed headers so that new msgfmt won't complain anymore.
	* uwm/Makefile.am: added test for bison pretending to be berkley yacc
	  which currently does not work.

2003-05-04  Christian Ruppert <arc@users.sf.net>
	* added po/Makevars

2003-04-17  Christian Ruppert <arc@users.sf.net>
	* uwm/handlers.c (HandleButtonPress): replaced XQueryPointer by